# llm

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.env.example
.github/workflows/: docker-publish.yml
src/: main.py  pyproject.toml  test_index  test_index.json
src/data/: test.txt
src/tests/: test_simple.py
